--- a/references.bib
+++ b/references.bib
@@ -1,11 +1,21 @@
 
-@MISC{Jeanette_Clark_Angie_Garcia_Matthew_B_Jones_Justin_Kadi_Maggie_Klope_Camila_Vargas_Poulsen2024-zl,
+@book{Jeanette_Clark_Angie_Garcia_Matthew_B_Jones_Justin_Kadi_Maggie_Klope_Camila_Vargas_Poulsen2024-zl,
   title        = "Reproducible Approaches to Arctic Research Using {R}",
   author       = "{Jeanette Clark, Angie Garcia, Matthew B. Jones, Justin Kadi,
                   Maggie Klope, Camila Vargas Poulsen}",
-  publisher    = "Arctic Data Center \& NCEAS Learning Hub",
-  year         =  2024,
-  howpublished = "\url{https://learning.nceas.ucsb.edu/2024-02-arctic/}",
+  publisher    = {Arctic Data Center},
+	year = {2024},
+	url = {https://learning.nceas.ucsb.edu/2024-02-arctic/},
   note         = "Accessed: 2024-4-3",
   language     = "en"
+}
+
+@book{clark2023,
+	title = {Scalable and Computationally Reproducible Approaches to Arctic Research},
+	author = {Clark, S. Jeanette and Jones, Matthew B. and Csik, Samantha and {García}, Carmen Galaz and Mecum, Bryce and Haycock-Chavez, Natasha and Virlar-Knight, Daphne and Cohen, Juliet and Liljedahl, Anna},
+	year = {2023},
+	date = {2023},
+	publisher = {Arctic Data Center},
+	doi = {10.18739/A2QF8JM2V},
+	url = {https://learning.nceas.ucsb.edu/2023-03-arctic/}
 }
