--- a/index.qmd
+++ b/index.qmd
@@ -79,7 +79,7 @@ The version control system we’ll be diving into is Git, the most widely used m
 
 # But Before we dive into Git and GitHub...
 
-## In Summary:
+## In Summary, Reproducible Research is:
 
 Working in a reproducible manner:
 
@@ -126,6 +126,10 @@ Computational provenance refers to the origin and processing history of data inc
 -   Methods, dataflow, and dependencies
 
 When we put these all together with formal documentation, we create a **computational workflow** that captures all of the steps from initial data cleaning and integration, through analysis, modeling, and visualization. In other words, **computational provenance is a formalized description of a workflow from the origin of the data to it’s final outcome**.
+
+Here’s an example of a computational workflow from Mark Carls: [Mark Carls. Analysis of hydrocarbons following the Exxon Valdez oil spill, Gulf of Alaska, 1989 - 2014. Gulf of Alaska Data Portal. urn:uuid:3249ada0-afe3-4dd6-875e-0f7928a4c171.](https://search.dataone.org/view/urn%3Auuid%3A3249ada0-afe3-4dd6-875e-0f7928a4c171), that represents a three step workflow comprising four source data files and two output visualizations.
+
+![](240410_brown_bag_files/comp-workflow-1.png){width="920"}
 
 # NOW Let's dive into Git and GitHub:
 
@@ -584,11 +588,21 @@ Fortunately for us, Ben Marwick (and others) have written an R package called [r
 
 Let’s explore the structure `rrtools` has put in place for us. Inside the analysis folder we have 5 folders. Different parts of our project will go into this different folders. Our data into the `data` folder, when the time comes to save any figure, we should save them into the `figures` folder, and so on.
 
+![Research compendia from Marwick et al.](240410_brown_bag_files/compendia.png){width="751"}
+
 You’ll notice a `analysis/templates` directory that contains journal citation style language (CSL) files which set the style of citations and reference list for the journal (the Journal of Archaeological Science, in this example). The template.Rmd renders into the template.docx. This document is called in the paper.qmd YAML to style the output of the paper created in paper.qmd.
 
 What if I want a template from another journal, different from the Journal of Archeological Science? We can create other journal’s template with the `rticles` package. This package will provide the templates and necessary information to render your paper in the journal of your choice (note: not all journal are in the `rticles` package). With that in mind, we will delete the existing `paper` directory and create a new one shortly.
 
+**Additional information on RMarkdown templates with `rticles` can be found here <https://learning.nceas.ucsb.edu/2024-02-arctic/session_20.html#rmarkdown-templates-with-rticles>**
+
 ### **Workflow in a nutshell**
+
+> **Summary**
+>
+> -   Use `rrtools` to generate the core directory layout and approach to data handling.
+>
+> -   Then use `rticles` to create the structure of the paper itself. The combination is incredibly flexible.
 
 Things we can do with our research compendium:
 
